# hscopier

./: CMakeLists.txt  hscopier.glade  libosu
src/: main.cpp  signals.cpp  signals.hpp
